--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "name": "donggei 的个人博客",
     "start_url": ".",
     "description": "记录精彩的程序人生",
-    "short_name": "${shortName}",
+    "short_name": "donggei 的个人博客",
     "icons": [
         {
             "sizes": "48x48",
