--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "name": "donggei 的个人博客",
     "start_url": ".",
-    "description": "记录精彩的程序人生",
+    "description": "藏器于身，不患无此时 ",
     "short_name": "donggei 的个人博客",
     "icons": [
         {
