--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "name": "donggei 的个人博客",
     "start_url": ".",
     "description": "藏器于身，不患无此时 ",
-    "short_name": "donggei 的个人博客",
+    "short_name": "${shortName}",
     "icons": [
         {
             "sizes": "48x48",
